Fix ModalHeader not visible when height of the viewport is small

--- a/ui/src/components/Modal/Modal.module.css
+++ b/ui/src/components/Modal/Modal.module.css
@@ -10,15 +10,18 @@
     padding: 27px 29px;
     box-shadow: -2px 2px 20px 2px #e9e5e5;
     display: none;
-    flex-direction: column;
-    justify-content: center;
     overflow: auto;
+    flex-direction: column;
 }
 
 .ModalShow {
     display: flex;
 }
 
+.ModalContainer {
+    min-height: min-content; /* Ensures container doesn't shrink smaller than content */
+    margin: auto 0; /* Centers the container vertically */
+}
 
 .ModalHeader {
     display: flex;
